# birdseye

./: .gitignore  .project  README.md  build.gradle  pyproject.toml  settings.gradle
.github/workflows/: build.yml  test.yml
birdseye/: __main__.py
birdseye/dynmap/api/: faces.py  tiles.py
birdseye/dynmap/exceptions/: __init__.py
birdseye/dynmap/models/: __init__.py  player.py  world.py
birdseye/ui/: window.py
birdseye_mc/: __main__.py
birdseye_mc/dynmap/: __init__.py
birdseye_mc/dynmap/api/: __init__.py  configuration.py  faces.py  update.py
birdseye_mc/dynmap/exceptions/: invalid_endpoint_exception.py
birdseye_mc/dynmap/models/: configuration.py  update.py
src/main/java/ca/retrylife/mc/birdseye/: App.java
src/main/java/ca/retrylife/mc/birdseye/lib/: DynmapConnection.java
src/main/java/ca/retrylife/mc/birdseye/lib/datastructures/local/: WorldWeather.java
