[tool.poetry]
name = "birdseye"
version = "0.1.0"
description = "A tool for watching players on multiplayer Minecraft servers"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"
pygame = "^2.0.0"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
